@@ -95,8 +95,9 @@
          HNORM = MAX( HNORM,WSP(I) )
       ENDDO
       HNORM = ABS( T*HNORM )
-      IF ( HNORM.EQ.0.0D0 ) STOP 'ERROR - NULL H IN INPUT OF DGPADM.'
-      NS = MAX( 0,INT(LOG(HNORM)/LOG(2.0D0))+2 )
+      IF (HNORM .EQ. 0.D0)
+     +     CALL RExit('ERROR - NULL H IN INPUT OF DGPADM.')
+      NS = MAX(0, INT(LOG(HNORM)/LOG(2.))+2)
       SCALE = T / DBLE(2**NS)
       SCALE2 = SCALE*SCALE
 !
@@ -157,7 +158,7 @@
       ENDIF
       CALL DAXPY( MM, -1.0D0,WSP(IP),1, WSP(IQ),1 )
       CALL DGESV( M,M, WSP(IQ),M, IPIV, WSP(IP),M, IFLAG )
-      IF ( IFLAG.NE.0 ) STOP 'PROBLEM IN DGESV (WITHIN DGPADM)'
+      IF ( IFLAG.NE.0 ) CALL RWarn ('PROBLEM IN DGESV (WITHIN DGPADM)')
       CALL DSCAL( MM, 2.0D0, WSP(IP), 1 )
       DO J = 1,M
          WSP(IP+(J-1)*(M+1)) = WSP(IP+(J-1)*(M+1)) + 1.0D0
